--- a/AEIS/AEIS/Views/Home/Index.cshtml
+++ b/AEIS/AEIS/Views/Home/Index.cshtml
@@ -5,13 +5,13 @@
 @using AEIS.Models
 
 <section class="dzsparallaxer auto-init height-is-based-on-content use-loading mode-scroll loaded dzsprx-readyall" data-options='{direction: "reverse", settings_mode_oneelement_max_offset: "150"}'>
-    <div class="divimage dzsparallaxer--target w-100 g-bg-pos-bottom-center" style="height: 120%; background-image: url(http://bizhi.pcze.com/zhuomian/1920x1200_1920x1080/29.jpg);"></div>
+    <div class="divimage dzsparallaxer--target w-100 g-bg-pos-bottom-center" style="height: 120%; background-image: url(img/bg.png);"></div>
 
     <div class="container g-py-200">
         <div class="row">
             <div class="col-lg-12">
-                <h3 class="g-color-white g-font-weight-300 g-font-size-40 g-line-height-1_2 mb-4">Audience Emotion Identification System</h3>
-                <span class="d-block g-color-white-opacity-0_8 g-font-size-16 mb-5"></span>
+                <h3 class="g-color-white g-font-weight-300 g-font-size-40 g-line-height-1_2 mb-4">沒有智慧的力量，就沒有夢想的方向。</h3>
+                <span class="d-block g-color-white-opacity-0_8 g-font-size-16 mb-5">Audience Emotion Identification System</span>
             </div>
         </div>
     </div>
