--- a/AEIS/AEIS/Views/Product/ProductDetail.cshtml
+++ b/AEIS/AEIS/Views/Product/ProductDetail.cshtml
@@ -33,7 +33,7 @@
                     </div>
                     <div class="row g-mx-minus-5 g-mb-20">
                         <div class="col g-px-5 g-mb-10">
-                            <button class="btn btn-block u-btn-primary g-font-size-12 text-uppercase g-py-15 g-px-25" type="button">我要購買</button>
+                            <button class="btn btn-block u-btn-primary g-font-size-12 text-uppercase g-py-15 g-px-25" type="button" onclick="location.href='WantToBuy?ProductID=@Model.Item1.ProductID'">我要購買</button>
                         </div>
                         <div class="col g-px-5 g-mb-10">
                             <button class="btn btn-block u-btn-outline-black g-brd-gray-dark-v5 g-brd-black--hover g-color-gray-dark-v4 g-color-white--hover g-font-size-12 text-uppercase g-py-15 g-px-25 AddToCart" type="button" ProductID="@Model.Item1.ProductID">加入購物車</button>
