--- a/AEIS/AEIS/Views/User/Login.cshtml
+++ b/AEIS/AEIS/Views/User/Login.cshtml
@@ -13,11 +13,11 @@
                     <form class="g-py-15" action="~/LoginProcess" method="post">
                         <div class="mb-4">
                             <label class="g-color-gray-dark-v2 g-font-weight-600 g-font-size-13">使用者名稱</label>
-                            <input class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v4 g-brd-primary--hover rounded g-py-15 g-px-15" type="text" name="username" placeholder="使用者名稱">
+                            <input class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v4 g-brd-primary--hover rounded g-py-15 g-px-15" type="text" name="username" placeholder="使用者名稱" required="required">
                         </div>
                         <div class="g-mb-35">
                             <label class="g-color-gray-dark-v2 g-font-weight-600 g-font-size-13">密碼</label>
-                            <input class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v4 g-brd-primary--hover rounded g-py-15 g-px-15 mb-3" type="password" name="password" placeholder="密碼">
+                            <input class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v4 g-brd-primary--hover rounded g-py-15 g-px-15 mb-3" type="password" name="password" placeholder="密碼" required="required">
                             <div class="row justify-content-between">
                                 <div class="col align-self-center text-right">
                                     <a class="g-font-size-12" href="ForgetPassword">忘記密碼?</a>
